--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -15,3 +15,11 @@
     align-items: centre;
     box-shadow: inset 0 0 0 0 1000px rgba(0,0,0,0.2);
 }
+
+.h1{
+    color: #ffffff
+}
+
+.p {
+    color: #ffff
+}
