--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -3,24 +3,32 @@
 }
 
 .btn {
-    padding: 8px 20px;
-    border-radius: 8px;
+    padding: 1em;
+    border-radius: 20px;
     outline: none;
     border: none;
+    text-decoration: none;
     cursor: pointer;
 }
 
 .btn--primary {
     background-color: var(--primary);
     color: #242424;
-    border: 1 px solid var(--primary);
+    border: 3px solid var(--primary);
+    padding: 1em;
+    text-decoration: none;
 }
 
 .btn--outline {
     background-color: transparent;
     color: #fff;
-    border: 1 px solid var(--primary);
-    transition: all 0.3s ease-out;
+    padding: 1em;
+    /* display: block; */
+    width: 100%;
+    text-decoration: none;
+    border: 3px solid var(--primary);
+    border-radius: 20px;
+    transition: all 0.6s ease-in;
 
 }
 
