--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -41,7 +41,7 @@
     list-style: none;
     text-align: center;
     width: 60vw;
-    justify-content: end;
+    /* justify-content: center; */
     margin-right: 2rem;
   }
   
