--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,7 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%); */
     height: 80px;
+    background: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,6 +9,10 @@
     position: sticky;
     top: 0;
     z-index: 999;
+  }
+
+  .navbar.active {
+    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   }
   
   .navbar-container {
