--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,6 +9,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    width: 100vw;
   }
 
   .navbar.active {
@@ -20,7 +21,8 @@
     justify-content: center;
     align-items: center;
     height: 80px;
-    max-width: 1500px;
+    /* max-width: 1500px; */
+    width: 100vw;
   }
   
   .navbar-logo {
